<resources>
    <string name="app_name">MenuXml</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="font_10">10号字体</string>
    <string name="font_12">12号字体</string>
    <string name="font_14">14号字体</string>
    <string name="font_16">16号字体</string>
    <string name="font_18">18号字体</string>

    <string name="fuck">Fuck you</string>

    <string name="font_size">字体大小</string>
    <string name="font_color">字体颜色</string>

    <string name="color_red">红色</string>
    <string name="color_green">绿色</string>
    <string name="color_blue">蓝色</string>
</resources>
